[gd_scene load_steps=3 format=3 uid="uid://cf88lw1hrg055"]

[ext_resource type="Script" path="res://modules/UI/prompt_dialog/prompt_dialog.gd" id="1_kou3n"]
[ext_resource type="StyleBox" uid="uid://bg8tf403k7ydc" path="res://modules/UI/backdrop_panel.tres" id="1_m75if"]

[node name="PromptDialog" type="CanvasLayer"]
script = ExtResource("1_kou3n")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_m75if")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Enter a value below:"

[node name="TextEdit" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Cancel" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Ok" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ok"

[connection signal="text_submitted" from="CenterContainer/PanelContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="button_down" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_ok_button_down"]
